# 2048mail

./: .gitignore  .python-version  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_orchestrator.py
agents/: README  __init__.py  models.py  orchestrator.py  orchestrator_chat_prompts.py  orchestrator_text_completions.py
config/: README
devserver/: localserver.py  main.py
devserver/api/: __init__.py  auth_router.py  debug_router.py  email_router.py  ui_router.py  websocket_router.py
devserver/core/: __init__.py  application.py  config.py
devserver/models/: __init__.py  api_models.py  user_state.py
devserver/retired/: fastapi_server.py  localserver.py
devserver/services/: __init__.py  email_service.py  feedback_service.py  oauth_service.py  user_state_service.py
devserver/templates/: index.html
devserver/websockets/: __init__.py  connection_manager.py
libs/: README.md  __init__.py  api_manager.py  google_oauth.py
prompts/: decline_writer_prompt.txt  email_categorizer_prompt.txt  email_editor_agent_prompt.txt  email_needs_response_prompt.txt  email_summarizer_prompt.txt  email_writer_prompt.txt  meeting_request_decider_prompt.txt  schedule_email_writer_prompt.txt
tests/: test_check_email.py
tools/: __init__.py  check_email.py  check_snoozed_email.py  email_archiver.py  email_extractor.py  email_label_remover.py  email_labeler.py  email_parser.py  email_retriever.py  extract_headers.py  extract_label_ids.py  extract_mimetype.py  human_feedback.py  json_extractor.py  json_parser.py  text_cleaner.py  web_feedback.py
